# openstreetmap-mcp

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
src/openstreetmap_mcp/: resources.py  utils.py
src/openstreetmap_mcp/tools/: extras.py  search.py
src/osm_mcp_server/: client.py  instance.py  server.py
src/osm_mcp_server/tools/: analysis.py  geocoding.py  routing.py
