[project]
name = "openstreetmap-mcp"
version = "1.0.0"
description = "A modular, enterprise-grade OpenStreetMap MCP server with advanced geospatial analytics."
readme = "README.md"
authors = [
    { name = "Specter Hub", email = "neco.001@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "mcp[cli]>=1.0.0",
    "shapely>=2.0.0",
    "haversine>=2.8.0",
    "geojson>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
osm-mcp-server = "osm_mcp_server:main"
